# huawei-research

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
docs/: report.tex
notebooks/: ExperimentRun.ipynb  GoogleColabRun.ipynb
scripts/: run_adamw.sh  run_experiments.sh  run_mezo.sh  run_muon.sh  run_muon_hybrid.sh
src/: compute_params_for_muon_adam.py  data_utils.py  train.py  utils.py
src/mezo/: metrics.py  mezo_trainer.py
src/optimizers/: muon.py
