[project]
name = "huawei-research"
version = "0.1.0"
description = ""
authors = [
    {name = "Odilzhon Negmatuloev",email = "odilzhon100@gmail.com"}
]
packages = [{ include = "src" }]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "transformers (>=5.5.4,<6.0.0)",
    "datasets (>=4.8.4,<5.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "huggingface-hub (>=1.11.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "accelerate (==1.1.0)",
    "tensorboardx (>=2.6.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
